# opengl_sandbox

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/app_01_hello_triangle/: main.cpp
ext/: CMakeLists.txt
src/: main.cpp
src/core/: engine.cpp  engine.h  shader.cpp  shader.h
